# tap-lightspeed-rseries-migration

./: README.md  meltano.yml  pyproject.toml  tox.ini
tap_lightspeed_rseries/: auth.py  client.py  streams.py  tap.py
